Cambios en los modulos de citas medicas y disponibilidad de doctores